--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
           href="https://www.linkedin.com/in/piyush-gaur-0749051b0/"
           >Piyush Gaur</a
         >.
+      <div>credits-:<u>Jonas</u></div>
       </p>
     </footer>
 
